# tabpfn-wrapper

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/rules/: git.mdc
docs/: MAINTAINER_DOCS.md  architecture_plan.md  client_api_docs.md  deployment_guide.md  roadmap.md
static/: robots.txt
static/css/: styles.css
static/js/: dashboard.js  landing.js  main.js  predict.js  train.js
tabpfn_api/api/: auth.py  models.py
tabpfn_api/core/: config.py  logging_config.py  security.py
tabpfn_api/db/: database.py
tabpfn_api/models/: model.py  user.py
tabpfn_api/schemas/: auth.py  model.py
tabpfn_api/services/: auth_service.py  model_service.py
tabpfn_api/tabpfn_interface/: client.py
tabpfn_api/ui/: routes.py
templates/: base.html  dashboard.html  landing.html  predict.html  train.html
tests/: conftest.py  test_api_auth.py  test_api_models.py  test_csv_upload.py
tests/manual_tests/: test_deployed_api.py
